Add title to index.html for blog page

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<title>r4tts Burr0w</title>
 <h1>Hello world X[]
   <p>This is the start of my new epic swag blog page thing, stay tuned for more awesomeness ദ്ദി◝ ⩊ ◜.
 
