--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <title>r4tts Burr0w</title>
-<h1>Hello world X[]
-  <p>This is the start of my new epic swag blog page thing, stay tuned for more awesomeness ദ്ദി◝ ⩊ ◜.
+<h1><i>Hello world</i> X[]
+  <p>This is the start of my new <b>epic swag blog</b> page thing, stay tuned for more awesomeness ദ്ദി◝ ⩊ ◜.
 
 
 
