Add body tag with background color to index.html
Added a body tag with a background color to the HTML.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <title>r4tts Burr0w</title>
+<body>
+  <body style="background-color:DarkOrchid;">
 <h1><i>Hello world</i> X[]
   <p>This is the start of my new <b>epic swag blog</b> page thing, stay tuned for more awesomeness ദ്ദി◝ ⩊ ◜.
 <hr />
@@ -23,3 +25,4 @@
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠛⠿⠟⠻⠿⠿⠿⡟⠉⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 💥╾━╤デ╦︻ඞා
 </p>
+</body>
