--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
 <body style="background-color:DarkOrchid;">
 <h1><i>Hello world</i> X[]
   <p>This is the start of my new <b>epic swag blog</b> page thing, stay tuned for more awesomeness ദ്ദി◝ ⩊ ◜.
-<hr />
-
-
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣠⣤⣤⣴⣶⣶⣶⣶⣶⣤⣤⣦⣤⣄⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⣀⣴⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⡀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡄⠀⠀⠀
@@ -26,5 +23,5 @@
 💥╾━╤デ╦︻ඞා
 </p>
 <h2>Open Season is a pretty decent movie</h2>
-  <p> I need to 
+  <p> I need to learn how to add stuff onto here like images n shit cause I found some cool sonic gifs but idk how to code them in lol
 </body>
