--- a/index.html
+++ b/index.html
@@ -24,4 +24,5 @@
 </p>
 <h2>Open Season is a pretty decent movie</h2>
   <p> I need to learn how to add stuff onto here like images n shit cause I found some cool sonic gifs but idk how to code them in lol
+    <img src-"images/Blaze1.gif" width-"99" height-"56" />
 </body>
