--- a/index.html
+++ b/index.html
@@ -30,5 +30,5 @@
 </p>
 <h2>Open Season is a pretty decent movie</h2>
   <p> I need to learn how to add stuff onto here like images n shit cause I found some cool sonic gifs but idk how to code them in lol </p>
-<img src-"images/Blaze1.gif" alt-"Blaze1" style="width:99px;height:56px;" />
+<img src-"images/Blaze1.gif" alt-"Blaze1" style="width:99px;height:56px;">
 </body>
