--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     💥╾━╤デ╦︻ඞා
 </p>
 <h2>Open Season is a pretty decent movie</h2>
-  <p> I need to learn how to add stuff onto here like images n shit cause I found some cool sonic gifs but idk how to code them in lol 
-<img src="images/Blaze1.gif" alt="Blaze1" style="width:99px;height:56px;">
-    HOLY SHIT WE ARE FUCKING LIVE PEOPLE THIS IS AWESOME
-    
+  <p> I need to learn how to add stuff onto here like images n shit cause I found some cool sonic gifs but idk how to code them in lol<br /> 
+<img src="images/Blaze1.gif" alt="Blaze1" style="width:99px;height:56px;"><br />
+    HOLY SHIT WE ARE FUCKING LIVE PEOPLE THIS IS AWESOME<br />
+    ww
 </body>
