Update title and content in index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
-<title>r4tts Burr0w</title>
+<title>X[]</title>
 <body>
 <body style="background-color:DarkOrchid;">
-<h1><i>Hello world</i> X[]
-  <p>This is the start of my new <b>epic swag blog</b> page thing, stay tuned for more awesomeness ദ്ദി◝ ⩊ ◜.
+<h1><i>Welcome To The Space Jam <img src="images/Blaze1.gif" alt="Blaze1" style="width:99px;height:56px;"><br />
+<style>
+.hl { 
+  border-left: 20px solid black;
+  length: 2000px;
+}
+</style>
+<div class="hl"></div>
+  <p>This is the start of my new epic swag blog page thing, stay tuned for more awesomeness ദ്ദി◝ ⩊ ◜.
 
 
     
@@ -30,7 +37,7 @@
 </p>
 <h2>Open Season is a pretty decent movie</h2>
   <p> I need to learn how to add stuff onto here like images n shit cause I found some cool sonic gifs but idk how to code them in lol<br /> 
-<img src="images/Blaze1.gif" alt="Blaze1" style="width:99px;height:56px;"><br />
+
     HOLY SHIT WE ARE FUCKING LIVE PEOPLE THIS IS AWESOME<br />
 
     New goal: Make a homepage. <br />
