Fix HTML structure and add closing tags

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <title>X[]</title>
 <body>
 <body style="background-color:DarkOrchid;">
-<h1><i>Welcome To The Space Jam <img src="images/Blaze1.gif" alt="Blaze1" style="width:99px;height:56px;"><br />
+<h1><i>Welcome To The Space Jam <img src="images/Blaze1.gif" alt="Blaze1" style="width:99px;height:56px;"></i><br />
 <hr>{
     display: block;
     height: 1px;
@@ -10,6 +10,7 @@
     margin: 1em 0;
     padding: 0;
 }
+</hr>
   <p>This is the start of my new epic swag blog page thing, stay tuned for more awesomeness ദ്ദി◝ ⩊ ◜.
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣠⣤⣤⣴⣶⣶⣶⣶⣶⣤⣤⣦⣤⣄⠀⠀⠀⠀⠀⠀⠀<br />
 ⠀⠀⠀⠀⠀⠀⠀⣀⣴⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⡀⠀⠀⠀⠀<br />
