--- a/index.html
+++ b/index.html
@@ -2,15 +2,7 @@
 <body>
 <body style="background-color:DarkOrchid;">
 <h1><i>Welcome To The Space Jam <img src="images/Blaze1.gif" alt="Blaze1" style="width:99px;height:56px;"></i><br />
-<hr>{
-    display: block;
-    height: 1px;
-    border: 10;
-    border-top: 1px solid black;
-    margin: 1em 0;
-    padding: 0;
-}
-</hr>
+<hr border: 6px; color: black>
   <p>This is the start of my new epic swag blog page thing, stay tuned for more awesomeness ദ്ദി◝ ⩊ ◜.
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣠⣤⣤⣴⣶⣶⣶⣶⣶⣤⣤⣦⣤⣄⠀⠀⠀⠀⠀⠀⠀<br />
 ⠀⠀⠀⠀⠀⠀⠀⣀⣴⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⡀⠀⠀⠀⠀<br />
