--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
 <body style="background-color:DarkOrchid;">
 <h1><i>Welcome To The Space Jam <img src="images/Blaze1.gif" alt="Blaze1" style="width:99px;height:56px;"></i><br />
-<hr border: 6px; color: black>
+<hr>
   <p>This is the start of my new epic swag blog page thing, stay tuned for more awesomeness ദ്ദി◝ ⩊ ◜.
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣠⣤⣤⣴⣶⣶⣶⣶⣶⣤⣤⣦⣤⣄⠀⠀⠀⠀⠀⠀⠀<br />
 ⠀⠀⠀⠀⠀⠀⠀⣀⣴⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⡀⠀⠀⠀⠀<br />
@@ -26,13 +26,10 @@
     
     💥╾━╤デ╦︻ඞා
 </p>
+<hr>
 <h2>Open Season is a pretty decent movie</h2>
-  <p> I need to learn how to add stuff onto here like images n shit cause I found some cool sonic gifs but idk how to code them in lol<br /> 
-
-    HOLY SHIT WE ARE FUCKING LIVE PEOPLE THIS IS AWESOME<br />
-
+  1/6
     New goal: Make a homepage. <br />
-    Things to figure out: Tables and Lines, Color, Boxes, Links, and Videos <br />
+    --Things to figure out: Tables and Lines, Color, Boxes, Links, and Videos <br />
     Other goal: make a seperate subpage thing 
-    
 </body>
