--- a/index.html
+++ b/index.html
@@ -32,4 +32,6 @@
     New goal: Make a homepage. <br />
     --Things to figure out: Tables and Lines, Color, Boxes, Links, and Videos <br />
     Other goal: make a seperate subpage thing 
+  1/13
+    Cameron smells lol
 </body>
