--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <title>X[]</title>
 <body>
 <body style="background-color:DarkOrchid;">
+<style>
+div {
+  background-color: yellow;
+  width: 900px;
+  border: 10px solid black;
+}
+</style>
 <h1><i>Welcome To The Space Jam <img src="images/Blaze1.gif" alt="Blaze1" style="width:99px;height:56px;"></i><br />
 <hr>
   <p>This is the start of my new epic swag blog page thing, stay tuned for more awesomeness ദ്ദി◝ ⩊ ◜.
@@ -32,6 +39,7 @@
     New goal: Make a homepage. <br />
     --Things to figure out: Tables and Lines, Color, Boxes, Links, and Videos <br />
     Other goal: make a seperate subpage thing 
-  1/13
-    Cameron smells lol
+  1/13 <br />
+    Cameron smells lol <br />
+  
 </body>
