--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ div {
   border: 10px solid black;
 }
 </style>
+<div>Hey this is the text box lol XD</div>
 <h1><i>Welcome To The Space Jam <img src="images/Blaze1.gif" alt="Blaze1" style="width:99px;height:56px;"></i><br />
 <hr>
   <p>This is the start of my new epic swag blog page thing, stay tuned for more awesomeness ദ്ദി◝ ⩊ ◜.
