--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <style>
 div {
   background-color: yellow;
-  width: 900px;
+  width: 2000px;
   border: 10px solid black;
+  padding: 20px;
+  margin: 20px;
 }
 </style>
 <div>Hey this is the text box lol XD</div>
@@ -28,10 +30,7 @@ div {
 ⠀⠀⠀⠀⠀⢻⣿⣿⣿⣶⣾⣿⣿⣿⣿⣿⡟⢉⡁⢹⣿⣿⣿⣿⣿⣿⡏⠀⠀⠀⠀⠀<br />
 ⠀⠀⠀⠀⠀⠈⠻⠿⠟⢿⣿⣿⣿⣿⣿⣿⣧⣾⣿⣿⣿⣿⣿⣿⣿⣿⠀⠀⠀⠀⠀⠀<br />
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠘⠿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠿⣿⠿⠃⠀⠀⠀⠀⠀⠀<br />
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠛⠿⠟⠻⠿⠿⠿⡟⠉⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀<br />
-
-    
-    
+⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠛⠿⠟⠻⠿⠿⠿⡟⠉⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀<br /> 
     💥╾━╤デ╦︻ඞා
 </p>
 <hr>
