Adjust div width in index.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+#Welcome to the text part of everything.
 <title>X[]</title>
 <body>
 <body style="background-color:DarkOrchid;">
 <style>
 div {
   background-color: yellow;
-  width: 2000px;
+  width: 1980px;
   border: 10px solid black;
   padding: 20px;
   margin: 20px;
