Center align text and add styling to index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <body>
 <body style="background-color:DarkOrchid;">
 <style>
+h1 {text-align: center;}
+p {text-align: center;}
+div {text-align: center;}
 div {
   background-color: yellow;
   width: 1980px;
