--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ div {
   border: 2px solid black;
   padding: 20px;
   margin: 20px;
+  allign: center;
 }
 </style>
 <div>Hey this is the text box lol XD</div>
