--- a/index.html
+++ b/index.html
@@ -5,16 +5,8 @@
 h1 {text-align: center;}
 p {text-align: center;}
 div {text-align: center;}
-div {
-  background-color: yellow;
-  width: 1500px;
-  border: 2px solid black;
-  padding: 20px;
-  margin: 20px;
-  allign: center;
-}
 </style>
-<div>Hey this is the text box lol XD</div>
+<img src="images/FText1.gif" alt="FText1" style="width:550px;height:95px;">
 <h1><i>Welcome To The Space Jam <img src="images/Blaze1.gif" alt="Blaze1" style="width:99px;height:56px;"></i><br />
 <hr>
   <p>This is the start of my new epic swag blog page thing, stay tuned for more awesomeness ദ്ദി◝ ⩊ ◜.
