Fix image alignment in index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 h1 {text-align: center;}
 p {text-align: center;}
 div {text-align: center;}
+img {align: center;}
 </style>
 <img src="images/FText1.gif" alt="FText1" style="width:550px;height:95px;">
 <h1><i>Welcome To The Space Jam <img src="images/Blaze1.gif" alt="Blaze1" style="width:99px;height:56px;"></i><br />
