--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-/* testing if this text shows up or not */
 <title>X[]</title>
 <body>
 <body style="background-color:DarkOrchid;">
@@ -6,9 +5,8 @@
 h1 {text-align: center;}
 p {text-align: center;}
 div {text-align: center;}
-img {align: center;}
 </style>
-<img src="images/FText1.gif" alt="FText1" style="width:550px;height:95px;">
+<img src="images/FText1.gif" alt="FText1" style="width:550px;height:95px; allign: center;">
 <h1><i>Welcome To The Space Jam <img src="images/Blaze1.gif" alt="Blaze1" style="width:99px;height:56px;"></i><br />
 <hr>
   <p>This is the start of my new epic swag blog page thing, stay tuned for more awesomeness ദ്ദി◝ ⩊ ◜.
@@ -38,5 +36,7 @@ img {align: center;}
     Other goal: make a seperate subpage thing 
   1/13 <br />
     Cameron smells lol <br />
+  1/16 <br />
+    Been thinking about this guy from the Tom and Jerry: The Fast and The Furry movie named Gorthan. He's pretty cool, here's a photo of him.
   </p>
 </body>
