--- a/index.html
+++ b/index.html
@@ -38,8 +38,14 @@ div {text-align: center;}
     Other goal: make a seperate subpage thing 
   1/13 <br />
     Cameron smells lol <br />
-    
+     <style>
+        img {
+            float: right;
+            margin: 10px;
+        }
+    </style>
   1/16 <br />
+    <img src="images/GoreGif2.gif" alt="GoreGif2" style="width:498px;height:498px;">
     Been thinking about this guy from the Tom and Jerry: The Fast and The Furry movie named Gorthan. He's pretty cool, here's a photo of him.
   </p>
 </body>
