--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
     </style>
   1/16 <br />
     <img src="images/GoreGif2.gif" alt="GoreGif2" style="width:498px;height:498px;">
-    Been thinking about this guy from the Tom and Jerry: The Fast and The Furry movie named Gorthan. He's pretty cool, here's a photo of him.
+    Testing putting images on the side of text. here is gore magala.
   </p>
+  <p> Now testing default image placement 
+    <img src="images/GoreGif2.gif" alt="GoreGif2" style="width:498px;height:498px;">
+    
+  </p>
+  
 </body>
+
+  
