--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <img src="images/FText1.gif" alt="FText1" style="width:550px;height:95px;allign: center;">
   <h1><i>Welcome To The Space Jam <img src="images/Blaze1.gif" alt="Blaze1" style="width:99px;height:56px;"></i><br />
   <hr>
+      <style>
+        img {
+            float: right;
+            margin: 10px;
+        }
+    </style>
   <p>This is the start of my new epic swag blog page thing, stay tuned for more awesomeness ദ്ദി◝ ⩊ ◜.
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣠⣤⣤⣴⣶⣶⣶⣶⣶⣤⣤⣦⣤⣄⠀⠀⠀⠀⠀⠀⠀<br />
 ⠀⠀⠀⠀⠀⠀⠀⣀⣴⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⡀⠀⠀⠀⠀<br />
@@ -16,7 +22,7 @@
 ⠀⠀⢀⣴⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡄⠀⠀<br />
 ⠀⢀⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⠀⠀<br />
 ⢀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⠀⠀<br />
-⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⠀<br />
+⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⠀<br />  <img src="images/GoreGif2.gif" alt="GoreGif2" style="width:498px;height:498px;">
 ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⠿⣿⣿⣿⣿⡇<br />
 ⠘⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡟⠀⠀⣿⣿⣿⣿⣿⣿⣟⠛⢿⡿⠟⢀⣴⣿⣿⣿⣿⡇<br />
 ⠀⠹⣿⣿⣿⣿⠋⠙⠻⠿⠟⠀⠀⢸⣿⣿⣿⣿⣿⣿⣿⣷⡄⠀⠀⠸⣿⣿⣿⣿⡿⠀<br />
