--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   p {text-align: center;}
   div {text-align: center;}
   </style>
-  <img src="images/FText1.gif" alt="FText1" style="width:550px;height:95px;allign: center;">
+  <img src="images/FText1.gif" alt="FText1" style="width:550px;height:95px;allign: center;"> <br />
   <h1><i>Welcome To The Space Jam <img src="images/Blaze1.gif" alt="Blaze1" style="width:99px;height:56px;"></i><br />
   <hr>
       <style>
@@ -15,14 +15,14 @@
             margin: 10px;
         }
     </style>
-  <p>This is the start of my new epic swag blog page thing, stay tuned for more awesomeness ദ്ദി◝ ⩊ ◜.
+  <p>This is the start of my new epic swag blog page thing, stay tuned for more awesomeness ദ്ദി◝ ⩊ ◜. <img src="images/GoreGif2.gif" alt="GoreGif2" style="width:498px;height:498px;">
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣠⣤⣤⣴⣶⣶⣶⣶⣶⣤⣤⣦⣤⣄⠀⠀⠀⠀⠀⠀⠀<br />
 ⠀⠀⠀⠀⠀⠀⠀⣀⣴⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⡀⠀⠀⠀⠀<br />
 ⠀⠀⠀⠀⠀⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡄⠀⠀⠀<br />
 ⠀⠀⢀⣴⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡄⠀⠀<br />
 ⠀⢀⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣷⠀⠀<br />
 ⢀⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⠀⠀<br />
-⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⠀<br />  <img src="images/GoreGif2.gif" alt="GoreGif2" style="width:498px;height:498px;">
+⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⠀<br /> 
 ⢸⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⠿⣿⣿⣿⣿⡇<br />
 ⠘⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡟⠀⠀⣿⣿⣿⣿⣿⣿⣟⠛⢿⡿⠟⢀⣴⣿⣿⣿⣿⡇<br />
 ⠀⠹⣿⣿⣿⣿⠋⠙⠻⠿⠟⠀⠀⢸⣿⣿⣿⣿⣿⣿⣿⣷⡄⠀⠀⠸⣿⣿⣿⣿⡿⠀<br />
@@ -53,6 +53,12 @@
     <img src="images/GoreGif2.gif" alt="GoreGif2" style="width:498px;height:498px;">
     Testing putting images on the side of text. here is gore magala. <br />
   </p>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
   <p> Now testing default image placement <br />
     <img src="images/GoreGif2.gif" alt="GoreGif2" style="width:498px;height:498px;">
     
