--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   p {text-align: center;}
   div {text-align: center;}
   </style>
-<img src="images/FText1.gif" alt="FText1" style="width:550px;height:95px;allign: center;"> <br />
+<img src="images/FText1.gif" alt="FText1" style="width:550px;height:95px;"> <br />
   <h1><i>Welcome To The Space Jam <img src="images/Blaze1.gif" alt="Blaze1" style="width:99px;height:56px;"></i><br />
   <hr>
       <style>
