--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <title>X[]</title>
 <body>
 <body style="background-color:DarkOrchid;">
+  <img src="images/FText1.gif" alt="FText1" style="width:550px;height:95px;"> <br />
   <style>
   h1 {text-align: center;}
   p {text-align: center;}
   div {text-align: center;}
   </style>
-<img src="images/FText1.gif" alt="FText1" style="width:550px;height:95px;"> <br />
   <h1><i>Welcome To The Space Jam <img src="images/Blaze1.gif" alt="Blaze1" style="width:99px;height:56px;"></i><br />
   <hr>
       <style>
@@ -16,7 +16,7 @@
         }
     </style>
     <style>
-    p {text-allign: center;}
+    p {text-allign: left;}
     </style>
   <p>This is the start of my new epic swag blog page thing, stay tuned for more awesomeness ദ്ദി◝ ⩊ ◜. <img src="images/GoreGif2.gif" alt="GoreGif2" style="width:498px;height:498px;">
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣠⣤⣤⣴⣶⣶⣶⣶⣶⣤⣤⣦⣤⣄⠀⠀⠀⠀⠀⠀⠀<br />
