--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <title>X[]</title>
 <body>
-  <body style="background-color:DarkOrchid;">
+  <body style="background-image:images/Background.png;">
   <style>
   h1 {text-align: center;}
   p {text-align: center;} 
