--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
+<head>
 <title>X[]</title>
+</head>
 <body>
-  <body style="background-image:images/Background.png;">
   <style>
   h1 {text-align: center;}
   p {text-align: center;} 
