--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   body {
     background-image:images/Background.png;}
   </style>
-  <img src="images/FText1.gif" alt="FText1" style="width:550px;height:95px;"><br />
+  <center><img src="images/FText1.gif" alt="FText1" style="width:550px;height:95px;"></center><br />
   <h1><i>Welcome To The Space Jam <img src="images/Blaze1.gif" alt="Blaze1" style="width:99px;height:56px;"></i><br />
 <hr>
       <style>
