--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   h1 {text-align: center;}
   p {text-align: center;} 
   div {text-align: center;}
-  body {
-    background-image:images/Background.png;}
+  body {background-image:img scr="images/Background.png";}
   </style>
   <center><img src="images/FText1.gif" alt="FText1" style="width:550px;height:95px;"></center><br />
   <h1><i>Welcome To The Space Jam <img src="images/Blaze1.gif" alt="Blaze1" style="width:99px;height:56px;"></i><br />
