--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   h1 {text-align: center;}
   p {text-align: center;} 
   div {text-align: center;}
-  body {background-image:img scr="images/Background.png";}
+  body {background-image: url("/images/Background.png");}
   </style>
   <center><img src="images/FText1.gif" alt="FText1" style="width:550px;height:95px;"></center><br />
   <h1><i>Welcome To The Space Jam <img src="images/Blaze1.gif" alt="Blaze1" style="width:99px;height:56px;"></i><br />
 <hr>
+</body>
   <p>This is the start of my new epic swag blog page thing, stay tuned for more awesomeness ദ്ദി◝ ⩊ ◜. <img src="images/GoreGif2.gif" alt="GoreGif2" style="width:498px;height:498px;">
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣠⣤⣤⣴⣶⣶⣶⣶⣶⣤⣤⣦⣤⣄⠀⠀⠀⠀⠀⠀⠀<br />
 ⠀⠀⠀⠀⠀⠀⠀⣀⣴⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⡀⠀⠀⠀⠀<br />
