--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
   <style>
   h1 {text-align: center;}
-  p {text-align: center;style="color:white;""} 
+  p {text-align: center;} 
   div {text-align: center;}
   body {background-image: url("/images/Background.png");}
   </style>
@@ -12,7 +12,7 @@
   <h1><i>Welcome To The Space Jam <img src="images/Blaze1.gif" alt="Blaze1" style="width:99px;height:56px;"></i><br />
 <hr>
 </body>
-  <p>This is the start of my new epic swag blog page thing, stay tuned for more awesomeness ദ്ദി◝ ⩊ ◜. <img src="images/GoreGif2.gif" alt="GoreGif2" style="width:498px;height:498px;">
+  <p style="color:white;">This is the start of my new epic swag blog page thing, stay tuned for more awesomeness ദ്ദി◝ ⩊ ◜. <img src="images/GoreGif2.gif" alt="GoreGif2" style="width:498px;height:498px;">
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣠⣤⣤⣴⣶⣶⣶⣶⣶⣤⣤⣦⣤⣄⠀⠀⠀⠀⠀⠀⠀<br />
 ⠀⠀⠀⠀⠀⠀⠀⣀⣴⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣦⡀⠀⠀⠀⠀<br />
 ⠀⠀⠀⠀⠀⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡄⠀⠀⠀<br />
