--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
   <style>
   h1 {text-align: center;}
-  p {text-align: center;} 
+  p {text-align: center;color:white} 
   div {text-align: center;}
   body {background-image: url("/images/Background.png");}
   </style>
