--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   div {text-align: center;}
   body {background-image: url("/images/Background.png");}
   </style>
-  <center><img src="images/FText1.gif" alt="FText1" style="width:550px;height:95px;"></center><br />
+  <img src="images/FText1.gif" alt="FText1" style="width:550px;height:95px;"><br />
+  <br />
   <h1><i>Welcome To The Space Jam <img src="images/Blaze1.gif" alt="Blaze1" style="width:99px;height:56px;"></i><br />
 <hr>
   <p>This is the start of my new epic swag blog page thing, stay tuned for more awesomeness ദ്ദി◝ ⩊ ◜. <img src="images/GoreGif2.gif" alt="GoreGif2" style="width:300px;height:300px;">
