--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   div {text-align: center;}
   body {background-image: url("/images/Background.png");}
   </style>
-  <img src="images/FText1.gif" alt="FText1" style="width:550px;height:95px;"><br />
+  <img src="images/FText1.gif" alt="FText1" style="width:550px;height:95px;allign: center;"><br />
   <br />
   <h1 style="color:yellow;"><i>Welcome To The Space Jam <img src="images/Blaze1.gif" alt="Blaze1" style="width:99px;height:56px;"></i><br />
 <hr>
