--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <br />
   <h1 style="color:yellow;"><i>Welcome To The Space Jam <img src="images/Blaze1.gif" alt="Blaze1" style="width:99px;height:56px;"></i><br />
 <hr>
-  <p>This is the start of my new epic swag blog page thing, stay tuned for more awesomeness ദ്ദി◝ ⩊ ◜. <img src="images/GoreGif2.gif" alt="GoreGif2" style="width:300px;height:300px;float: right;"><br />
+  <p>This is the start of my new epic swag blog page thing, stay tuned for more awesomeness ദ്ദി◝ ⩊ ◜. mhm<br />
     💥╾━╤デ╦︻ඞා
 <hr> 
 <h2>Open Season is a pretty decent movie</h2>
